fix: Remove @mui/icons-material
It's a great library but it increases our CI build time, stores an extra 128 MB of deps on disk, and it's unlikely we will ever use that many icons in this repo. Adding the few we do care about isn't that much work.

Minor rework to the Third Party page to add in line css that was removed by this package removal.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: 'yarn.lock'
 
-      - run: yarn install --frozen-lockfile
+      - run: yarn install --frozen-lockfile --production
       - run: yarn export
 
       - name: Publish to Cloudflare Pages
