--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: 'yarn.lock'
 
-      - run: yarn install --frozen-lockfile --production
+      - run: yarn install --frozen-lockfile
       - run: yarn export
 
       - name: Publish to Cloudflare Pages
