--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^0.5.0",
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3",
-    "vercel": "^28.18.3"
+    "typescript": "^4.9.3"
   }
 }
