--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
   },
   "homepage": "https://github.com/unownhash/docs#readme",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.15",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
@@ -30,9 +26,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^0.5.0",
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3",
-    "vercel": "^28.18.3"
+    "typescript": "^4.9.3"
   }
 }
