--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unownhash-docs",
+  "name": "UnownHash-docs",
   "version": "0.0.1",
-  "description": "Documentation for unownhash projects",
+  "description": "Documentation for Unown# projects",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
