--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "UnownHash-docs",
-  "version": "0.0.1",
+  "name": "docs",
+  "version": "0.0.2",
   "description": "Documentation for Unown# projects",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export",
     "start": "next start"
   },
   "repository": {
@@ -19,14 +18,14 @@
   },
   "homepage": "https://github.com/unownhash/docs#readme",
   "dependencies": {
-    "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "next": "^14.0.0",
+    "nextra": "^2.13.2",
+    "nextra-theme-docs": "^2.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "typescript": "^5.2.2"
   }
 }
