--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,12 @@
 {
   "semi": false,
   "trailingComma": "all",
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "*.mdx",
+      "options": {
+        "tabWidth": 4
+      }
+    }
 }
