--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "semi": false,
   "trailingComma": "all",
   "singleQuote": true,
+  "proseWrap": "never",
   "overrides": [
     {
       "files": "*.mdx",
@@ -9,4 +10,5 @@
         "tabWidth": 4
       }
     }
+  ]
 }
